frontend/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    tier: frontend
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      tier: frontend
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
        networking/allow-backend-access: "true"
        networking/allow-internet-access: "true"
    spec:
      containers:
      - name: nginx
        image: mensaah/nginx-curl-telnet
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    tier: frontend
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
