frontend/allow-frontend-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-access
spec:
  podSelector:
    matchLabels:
      networking/allow-frontend-access: "true"
  policyTypes:
    - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: "frontend"
